extras/local/istio-base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  gatewayClassName: istio
  listeners:
    - name: grafana-http
      hostname: grafana.devopslaboratory.org
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: auth-http
      hostname: auth.devopslaboratory.org
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: workflows-http
      hostname: workflows.devopslaboratory.org
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: argo-events-http
      hostname: argo-events.devopslaboratory.org
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: argocd-http
      hostname: cd.devopslaboratory.org
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
